# cw_3

./: README.md  main.py  pyproject.toml
tests/: test_functions.py  test_get_data.py  test_view_formats.py
utils/: functions.py  view_formats.py
