[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["CorridorOfChameleons <gdramze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
